<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.jasenko.cwsboco_product_tool.Coats.CoatsSpecActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="vertical">

            <Spinner
                android:id="@+id/spinner_product_type"
                android:layout_width="match_parent"
                android:layout_height="65sp"
                android:padding="16dp"
                android:prompt="@string/product_types_prompt"
                />

            <Spinner
                android:id="@+id/spinner_cuffs"
                android:layout_width="match_parent"
                android:layout_height="65sp"
                android:padding="16dp"
                android:prompt="@string/cuffs_prompt" />

            <Spinner
                android:id="@+id/spinner_pockets"
                android:layout_width="match_parent"
                android:layout_height="70sp"
                android:padding="16dp"
                android:prompt="@string/pockets_prompt" />

            <Spinner
                android:id="@+id/spinner_collar"
                android:layout_width="match_parent"
                android:layout_height="65sp"
                android:padding="16dp"
                android:prompt="@string/collar_prompt" />

            <Spinner
                android:id="@+id/spinner_garmentColor"
                android:layout_width="match_parent"
                android:layout_height="65sp"
                android:padding="16dp"
                android:prompt="@string/garment_color_prompt" />

            <Spinner
                android:id="@+id/spinner_collarColor"
                android:layout_width="match_parent"
                android:layout_height="65sp"
                android:padding="16dp"
                android:prompt="@string/collar_color_prompt" />

            <Button
                android:id="@+id/continue_button_spec"
                android:layout_width="match_parent"
                android:layout_height="160dp"
                android:text="@string/button_main"
                android:textSize="22dp"
                android:layout_gravity="center"/>
        </LinearLayout>

    </ScrollView>

</LinearLayout>
