<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="my.app.jasenko.cwsboco_product_tool.MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:layout_gravity="top"
                android:layout_margin="16dp"
                android:contentDescription="@string/logo"
                app:srcCompat="@drawable/cws_boco" />

            <EditText
                android:id="@+id/etAccount_name"
                android:layout_width="match_parent"
                android:textSize="20dp"
                android:layout_height="55dp"
                android:inputType = "text"
                android:gravity="center_horizontal"
                android:hint = "Enter account name"
                android:ellipsize="start"
                android:imeOptions="actionNext"/>

            <EditText
                android:id="@+id/etCustomer_name"
                android:layout_width="match_parent"
                android:textSize="20dp"
                android:layout_height="55dp"
                android:inputType = "text"
                android:gravity="center_horizontal"
                android:hint = "Enter customer's contact name"
                android:ellipsize="start"
                android:imeOptions="actionNext"/>

            <EditText
                android:id="@+id/etCustomer_contact_number"
                android:layout_width="match_parent"
                android:textSize="20dp"
                android:layout_height="55dp"
                android:inputType = "text"
                android:gravity="center_horizontal"
                android:hint = "Enter customer's contact number"
                android:ellipsize="start"
                android:imeOptions="actionNext"/>

            <EditText
                android:id="@+id/etCustomer_email"
                android:layout_width="match_parent"
                android:textSize="20dp"
                android:layout_height="55dp"
                android:inputType = "textEmailAddress"
                android:gravity="center_horizontal"
                android:hint = "Enter customer's contact email"
                android:ellipsize="start"
                android:imeOptions="actionDone"/>

            <Spinner
                android:id="@+id/spinner_main"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:prompt="@string/product_prompt"
                android:layout_gravity="center_vertical"
                android:layout_margin="16dp"/>

            <Button
                android:id="@+id/continue_button_main"
                android:layout_width="120dp"
                android:layout_height="50dp"
                android:text="@string/button_main"
                android:layout_gravity="center"/>
        </LinearLayout>
    </ScrollView>


</LinearLayout>
